# repo-to-resume-tailor

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.py  pyproject.toml
docs/: claude-code.md  claude-code.zh-CN.md  codex.md  codex.zh-CN.md  cursor.md  cursor.zh-CN.md  installation.md  installation.zh-CN.md
examples/: personal-jd-case.md  personal-jd-case.zh-CN.md  personal-role-case.md  personal-role-case.zh-CN.md
repo-to-resume-tailor/: SKILL.md
repo-to-resume-tailor/agents/: openai.yaml
repo-to-resume-tailor/references/: examples.md  prompt.md
src/repo_to_resume_tailor_cli/: __init__.py  __main__.py  installer.py
src/repo_to_resume_tailor_cli/data/repo-to-resume-tailor/: role_mapping.md
